WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
40403
Autoscroll on selection should take scrollbars into account as outside of the content.
https://bugs.webkit.org/show_bug.cgi?id=40403
Summary
Autoscroll on selection should take scrollbars into account as outside of the...
Hajime Morrita
Reported
2010-06-09 23:07:05 PDT
Created
attachment 58331
[details]
reproduce How to reproduce: - Resize window to about 500x500 - Open reproduce HTML - Mouse down somewhere on the text - Drag mouse cursor (caret) to rightmost scrollbar What to expect: - Window start to scroll to right Happens instead: - No scroll happens.
Attachments
reproduce
(877 bytes, text/html)
2010-06-09 23:07 PDT
,
Hajime Morrita
no flags
Details
patch v0
(2.58 KB, patch)
2010-06-28 03:32 PDT
,
Hajime Morrita
ojan
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Hajime Morrita
Comment 1
2010-06-09 23:08:30 PDT
Scrollbars with "overflow:scroll" work well. This happens only with outermost scrollbars.
Hajime Morrita
Comment 2
2010-06-24 22:54:57 PDT
How other applications behave: - Firefox and IE8 also start autoscroll when the cursor is over the scrollbar - TextEdit.app is also same.
Hajime Morrita
Comment 3
2010-06-28 03:32:10 PDT
Created
attachment 59889
[details]
patch v0
Hajime Morrita
Comment 4
2010-06-28 03:36:36 PDT
Could anyone can take a look at this? This type of autoscroll matters for fullscreen-oriented devices such as tablet and netbooks. Other apps also support this.
mitz
Comment 5
2010-06-28 08:11:41 PDT
Is there a reason why this cannot be tested with DumpRenderTree?
Hajime Morrita
Comment 6
2010-06-28 22:22:54 PDT
HI mitz, thank you for taking a look! (In reply to
comment #5
)
> Is there a reason why this cannot be tested with DumpRenderTree?
I tried, but couldn't figure out how. I tried to send mouse events using eventSender.mouseMove(), But nothing happen when the pointer's position is over the scrollbar. When the position is inside the content area (not over the scrollbar), events are delivered to WebCore. But with scrollbar, they aren't. I suspect invoking NSView.mouseMoved() or NSView.mouseDragged() isn't sufficient to deliver events to the scrollbar. But I'm not sure.
Hajime Morrita
Comment 7
2010-07-22 19:36:35 PDT
Committed
r63943
: <
http://trac.webkit.org/changeset/63943
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug