2010-07-22  MORITA Hajime  <morrita@google.com>

Reviewed by Ojan Vafai.

        Autoscroll on selection should take scrollbars into account as outside of the content.
        https://bugs.webkit.org/show_bug.cgi?id=40403

        ScrollView's scroll-bar was considered as a part of content rect,
        that prevents autoscroll to happen when the pointer is over the
        scroll-bar.  This change excluded scroll-bar region from scrolling
        delta calculation.

        Test: WebCore/manual-tests/autoscroll-over-scrollbar.html

        * rendering/RenderLayer.cpp:
        (WebCore::RenderLayer::scrollRectToVisible):

Canonical link: https://commits.webkit.org/54776@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@63943 268f45cc-cd09-0410-ab3c-d52691b4dbfc